--- a/src/CSS/style.css
+++ b/src/CSS/style.css
@@ -1,19 +1,21 @@
 #gallery {
   display: flex;
   list-style: none;
+  padding-left: 10px;
+  padding-right: 10px;
+  margin-left: -5px;
+  margin-top: -5px;
 }
 
 .gallery__item {
-  display: block;
-  width: 500px;
-  height: 100px;
-  margin: 5px;
-  flex-basis: calc(100% / 3);
+  flex-basis: calc((100% / 3) - 5px);
+  margin-left: 5px;
+  margin-top: 5px;
 }
 
-img {
+.gallery__item img {
   display: block;
-  max-width: 100%;
-  height: auto;
+  width: 100%;
+  height: 100%;
   object-fit: cover;
 }
